<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_pharma_iv_vision</name>
  <version>1.0.0</version>
  <description>
    Intelligent IV Bag Inspection with Continuous Learning ROS2-Based Architecture.
  
  </description>
  
  <maintainer email="contact@inte-r-action.com">inte-R-action Team</maintainer>
  <license>Apache-2.0</license>
  
  <url type="website">https://github.com/inte-R-action/ROS2Pharma</url>
  <url type="bugtracker">https://github.com/inte-R-action/ROS2Pharma/issues</url>
  <url type="repository">https://github.com/inte-R-action/ROS2Pharma</url>
  
  <author email="contact@inte-r-action.com">inte-R-action Team</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Vision and AI dependencies -->
  <depend>image_transport</depend>
  <depend>compressed_image_transport</depend>
  <depend>vision_msgs</depend>
  
  <!-- Robot control dependencies -->
  <depend>moveit_msgs</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  
  <!-- Python package dependencies -->
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>python3-torch</depend>
  <depend>python3-torchvision</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-pandas</depend>
  <depend>python3-scikit-learn</depend>
  <depend>python3-serial</depend>

  <!-- Development and testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
